src/test/ui/parser/issue-1802-2.stderr
error: no valid digits found for number
  --> $DIR/issue-1802-2.rs:5:16
   |
LL |     log(error, 0b_usize);
   |                ^^^

error[E0308]: mismatched types
  --> $DIR/issue-1802-2.rs:5:16
   |
LL |     log(error, 0b_usize);
   |                ^^^^^^^^ expected i32, found usize

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
